# brain_tumor_segmentation

./: .gitignore  Brain_Tumor_Segmentation_Report_Detailed_Expanded.docx  README.md  app.py  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  structure.py
config/: config.yaml
src/BrainTumorSegmentation/: __init__.py
src/BrainTumorSegmentation/components/: data_preprocessing.py  model_evaluation.py  model_training.py
src/BrainTumorSegmentation/config/: configuration.py
src/BrainTumorSegmentation/constants/: __init__.py
src/BrainTumorSegmentation/entity/: config_entity.py
src/BrainTumorSegmentation/pipeline/: prediction.py  stage_01_data_preprocessing.py  stage_02_model_training.py  stage_03_model_evaluation.py
src/BrainTumorSegmentation/utils/: common.py
trials/: notebook.ipynb
