[build-system]
# Minimum requirements and backend for building the package
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Project metadata
name = "BrainTumorSegmentation"  # Package name
version = "0.0.0"  # Initial version
description = "Robust Brain tumor segmentation and prediction using PyTorch"
authors = [{ name = "Sanskar Modi", email = "sansyprog8@gmail.com" }, { name = "Priyanshu Kumar Singh", email = "priyanshu1303d@gmail.com" }]
readme = "README.md"  # Path to the README file
license = { text = "MIT" }  # Project license
dependencies = []  # Project dependencies

[project.urls]
# Additional project URLs
"Bug Tracker" = "https://github.com/sanskarmodi8/brain_tumor_segmentation/issues"

[tool.isort]
# Configure isort to use Black's style
profile = "black"